# CMinusCompiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  generate_compile_commands.sh
docs/: semantic_rules.md
include/: ast.hpp
src/: compiler.h  globals.h  lexer.l  main.cpp  parser.y  parser.ypp  semantic.cpp  semantic.h  symtab.cpp  symtab.h  utils.cpp  utils.h
src/lexer/: lexer.l
src/parser/: parser.y
tests/: dup_fun.txt  dup_var.txt  fib.txt  gcd.1.txt  gcd_err.txt  gcd_semantic.txt  lexer  lexer.cpp  lexer.l  negative_index.txt  non_int_index.txt  test_lexer.cpp  test_main.cpp  test_parser.cpp  undeclared.txt  wrong_param.txt
